--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=library-management
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:1433/library_management
+spring.datasource.url=jdbc:mysql://localhost:3306/library_management
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Add these properties for debugging sql operations
@@ -12,4 +12,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # JWT SIGNING INFO
 jwt.secret=
-
+# Cors Implementation
+cors.originUrl=
