--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # JWT SIGNING INFO
 jwt.secret=
+jwt.access-token-expiration=300000
+jwt.refresh-token-expiration=604800000
+
 # Cors Implementation
 cors.originUrl=
