Implemented docker file and composer

--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+bootJar {
+    // Ensure a consistent jar name
+    archiveFileName = 'library-management-backend.jar'
+}
