--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 # Application Configuration
-APP_NAME=course-manager
+APP_NAME=library-management
 APP_PORT=8080
 
 # MySQL Configuration
-MYSQL_DATABASE=course_manager
+MYSQL_DATABASE=library_management
 MYSQL_ROOT_PASSWORD=
 MYSQL_ALLOW_EMPTY_PASSWORD=yes
 MYSQL_HOST=mysql
 MYSQL_PORT=3307
 
 # JWT Configuration
-JWT_SECRET=YOUR-JWT-KEY
+JWT_SECRET=
 JWT_ACCESS_TOKEN_EXPIRATION=300000
 JWT_REFRESH_TOKEN_EXPIRATION=604800000
 
