--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,19 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 # JWT SIGNING INFO
 jwt.secret=
 jwt.access-token-expiration=300000
 jwt.refresh-token-expiration=604800000
+
 # Cors Implementation
 cors.originUrl=
+
+# Email Setup
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=YOUR-EMAIL-ID
+spring.mail.password=YOUR-APP-PASSWORD
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
