--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=library-management
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/library_management
+spring.datasource.url=jdbc:mysql://127.0.0.1:1433/library_management
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,12 +9,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 # JWT SIGNING INFO
 jwt.secret=
 jwt.access-token-expiration=300000
 jwt.refresh-token-expiration=604800000
+
 # Cors Implementation
 cors.originUrl=
+
+
 # Email Setup
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
